--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,14 @@
-{}
+{
+  "workbench.colorCustomizations": {
+    "statusBar.background": "#b0c4de",
+    "statusBar.foreground": "#000000",
+    "statusBar.noFolderBackground": "#b0c4de",
+    "statusBar.noFolderForeground": "#000000",
+    "statusBar.debuggingBackground": "#b0c4de",
+    "statusBar.debuggingForeground": "#000000",
+    "titleBar.activeBackground": "#b0c4de",
+    "titleBar.activeForeground": "#000000",
+    "titleBar.inactiveBackground": "#b0c4de",
+    "titleBar.inactiveForeground": "#000000"
+  }
+}
