--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
   "workbench.colorCustomizations": {
-    "statusBar.background": "#b0c4de",
+    "statusBar.background": "#c2b280",
     "statusBar.foreground": "#000000",
-    "statusBar.noFolderBackground": "#b0c4de",
+    "statusBar.noFolderBackground": "#c2b280",
     "statusBar.noFolderForeground": "#000000",
-    "statusBar.debuggingBackground": "#b0c4de",
+    "statusBar.debuggingBackground": "#c2b280",
     "statusBar.debuggingForeground": "#000000",
-    "titleBar.activeBackground": "#b0c4de",
+    "titleBar.activeBackground": "#c2b280",
     "titleBar.activeForeground": "#000000",
-    "titleBar.inactiveBackground": "#b0c4de",
+    "titleBar.inactiveBackground": "#c2b280",
     "titleBar.inactiveForeground": "#000000"
   }
 }
