--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
   "workbench.colorCustomizations": {
-    "statusBar.background": "#78866b",
+    "statusBar.background": "#5e8b8e",
     "statusBar.foreground": "#ffffff",
-    "statusBar.noFolderBackground": "#78866b",
+    "statusBar.noFolderBackground": "#5e8b8e",
     "statusBar.noFolderForeground": "#ffffff",
-    "statusBar.debuggingBackground": "#78866b",
+    "statusBar.debuggingBackground": "#5e8b8e",
     "statusBar.debuggingForeground": "#ffffff",
-    "titleBar.activeBackground": "#78866b",
+    "titleBar.activeBackground": "#5e8b8e",
     "titleBar.activeForeground": "#ffffff",
-    "titleBar.inactiveBackground": "#78866b",
+    "titleBar.inactiveBackground": "#5e8b8e",
     "titleBar.inactiveForeground": "#ffffff"
   }
 }
