--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
   "workbench.colorCustomizations": {
-    "statusBar.background": "#6a8caf",
+    "statusBar.background": "#78866b",
     "statusBar.foreground": "#ffffff",
-    "statusBar.noFolderBackground": "#6a8caf",
+    "statusBar.noFolderBackground": "#78866b",
     "statusBar.noFolderForeground": "#ffffff",
-    "statusBar.debuggingBackground": "#6a8caf",
+    "statusBar.debuggingBackground": "#78866b",
     "statusBar.debuggingForeground": "#ffffff",
-    "titleBar.activeBackground": "#6a8caf",
+    "titleBar.activeBackground": "#78866b",
     "titleBar.activeForeground": "#ffffff",
-    "titleBar.inactiveBackground": "#6a8caf",
+    "titleBar.inactiveBackground": "#78866b",
     "titleBar.inactiveForeground": "#ffffff"
   }
 }
