--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
   "workbench.colorCustomizations": {
-    "statusBar.background": "#78866b",
-    "statusBar.foreground": "#ffffff",
-    "statusBar.noFolderBackground": "#78866b",
-    "statusBar.noFolderForeground": "#ffffff",
-    "statusBar.debuggingBackground": "#78866b",
-    "statusBar.debuggingForeground": "#ffffff",
-    "titleBar.activeBackground": "#78866b",
-    "titleBar.activeForeground": "#ffffff",
-    "titleBar.inactiveBackground": "#78866b",
-    "titleBar.inactiveForeground": "#ffffff"
+    "statusBar.background": "#dcb7b7",
+    "statusBar.foreground": "#000000",
+    "statusBar.noFolderBackground": "#dcb7b7",
+    "statusBar.noFolderForeground": "#000000",
+    "statusBar.debuggingBackground": "#dcb7b7",
+    "statusBar.debuggingForeground": "#000000",
+    "titleBar.activeBackground": "#dcb7b7",
+    "titleBar.activeForeground": "#000000",
+    "titleBar.inactiveBackground": "#dcb7b7",
+    "titleBar.inactiveForeground": "#000000"
   }
 }
